[gd_scene load_steps=17 format=3 uid="uid://cjbikouypipmf"]

[ext_resource type="Texture2D" uid="uid://dfp06ckqptyhw" path="res://assets/textures/dev/grids/Dark/texture_07.png" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://bf5whxdc6f0y3" path="res://assets/hdris/kloofendal_48d_partly_cloudy_puresky_2k.hdr" id="2_sugp2"]
[ext_resource type="Script" uid="uid://b2m324gp5gnk4" path="res://scripts/player.gd" id="3_sugp2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k0juu"]
albedo_texture = ExtResource("1_0wfyh")
uv1_triplanar = true

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_71j4m"]
panorama = ExtResource("2_sugp2")

[sub_resource type="Sky" id="Sky_qfnet"]
sky_material = SubResource("PanoramaSkyMaterial_71j4m")

[sub_resource type="Environment" id="Environment_i7141"]
background_mode = 2
sky = SubResource("Sky_qfnet")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Animation" id="Animation_jyhfs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tbgi4"]
resource_name = "hardlanding"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.261799, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sugp2"]
resource_name = "jumping"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tefeu"]
resource_name = "roll"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.266667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(6.28319, 0, 0), Vector3(6.28319, 0, 0.139626), Vector3(3.14159, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.8, 0), Vector3(0, -0.8, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_o6xl0"]
resource_name = "softlanding"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0261799, 0, 0.00872665), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.02, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbgi4"]
_data = {
&"RESET": SubResource("Animation_jyhfs"),
&"hardlanding": SubResource("Animation_tbgi4"),
&"jumping": SubResource("Animation_sugp2"),
&"roll": SubResource("Animation_tefeu"),
&"softlanding": SubResource("Animation_o6xl0")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sugp2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tbgi4"]
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jyhfs"]
height = 1.2

[node name="world" type="Node3D"]

[node name="stage" type="Node3D" parent="."]

[node name="floor" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.5, 0)
use_collision = true
size = Vector3(26, 1, 20)
material = SubResource("StandardMaterial3D_k0juu")

[node name="floor6" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -0.5, -25)
use_collision = true
size = Vector3(16, 1, 30)
material = SubResource("StandardMaterial3D_k0juu")

[node name="floor5" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.5, 43)
use_collision = true
size = Vector3(26, 1, 20)
material = SubResource("StandardMaterial3D_k0juu")

[node name="floor4" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.0463, -0.5, 0)
use_collision = true
size = Vector3(26.646, 1, 20)
material = SubResource("StandardMaterial3D_k0juu")

[node name="floor3" type="CSGBox3D" parent="stage"]
transform = Transform3D(0.5, 0.866026, 0, -0.866026, 0.5, 0, 0, 0, 1, -21, -0.5, 0)
use_collision = true
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_k0juu")

[node name="floor2" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.5, 21)
use_collision = true
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_k0juu")

[node name="box" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, -2)
use_collision = true
material = SubResource("StandardMaterial3D_k0juu")

[node name="box2" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.75, 0)
use_collision = true
size = Vector3(1, 1.5, 1)
material = SubResource("StandardMaterial3D_k0juu")

[node name="box5" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.75, -2)
use_collision = true
size = Vector3(1, 1.5, 1)
material = SubResource("StandardMaterial3D_k0juu")

[node name="box3" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 2)
use_collision = true
size = Vector3(1, 2, 1)
material = SubResource("StandardMaterial3D_k0juu")

[node name="box6" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, -2)
use_collision = true
size = Vector3(1, 2, 1)
material = SubResource("StandardMaterial3D_k0juu")

[node name="box4" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.35, 4)
use_collision = true
size = Vector3(1, 2.7, 1)
material = SubResource("StandardMaterial3D_k0juu")

[node name="box7" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, 6)
use_collision = true
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_k0juu")

[node name="cieling" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 2.33657, -12.579)
use_collision = true
size = Vector3(11, 1, 20)
material = SubResource("StandardMaterial3D_k0juu")

[node name="cieling2" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.5, 256.787, 0.0209999)
use_collision = true
size = Vector3(3, 509.9, 20)
material = SubResource("StandardMaterial3D_k0juu")

[node name="cieling3" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.5, 4.42141, 25.021)
use_collision = true
size = Vector3(3, 8.83115, 30)
material = SubResource("StandardMaterial3D_k0juu")

[node name="cieling4" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.5, 4.42141, -24.979)
use_collision = true
size = Vector3(3, 8.83115, 30)
material = SubResource("StandardMaterial3D_k0juu")

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_i7141")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.3, 0, 0)
script = ExtResource("3_sugp2")

[node name="neck" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="head" type="Node3D" parent="player/neck"]

[node name="eyes" type="Node3D" parent="player/neck/head"]

[node name="Camera3D" type="Camera3D" parent="player/neck/head/eyes"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="player/neck/head/eyes"]
libraries = {
&"": SubResource("AnimationLibrary_tbgi4")
}

[node name="standing_collision" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sugp2")

[node name="crouchjump_collision" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_tbgi4")
disabled = true

[node name="crouched_collision" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_jyhfs")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="player"]
target_position = Vector3(0, 2, 0)
